--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif
+    font-family: 'Inter', sans-serif;
     color: #243e63;
 }
 
@@ -39,10 +39,18 @@ body {
     line-height: 1.5;
     margin: 16px 0;
     letter-spacing: 0.025em;
+
 }
 
 section {
     padding: 0 32px;
+}
+.section__tag {
+      font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
 main {
@@ -64,18 +72,144 @@ main {
     font-size: 16px;
     transition: all 300ms ease;
 }
+.header__email--input {
+    width: 100%;
+    border-radius: 500px;
+    border: 2px solid rgb(229, 231, 235);
+    padding: 20px 192px 20px 32px;
+    color: rgb(36, 62, 99);
+    font-size: 16px;
+    font-weight: 500;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    transition: border-color 300ms;
+}
+input {
+    font-style: ;
+    font-variant-ligatures: ;
+    font-variant-caps: ;
+    font-variant-numeric: ;
+    font-variant-east-asian: ;
+    font-variant-alternates: ;
+    font-variant-position: ;
+    font-variant-emoji: ;
+    font-weight: ;
+    font-stretch: ;
+    font-size: ;
+    font-family: ;
+    font-optical-sizing: ;
+    font-size-adjust: ;
+    font-kerning: ;
+    font-feature-settings: ;
+    font-variation-settings: ;
+    text-rendering: auto;
+    color: fieldtext;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: start;
+    appearance: auto;
+    -webkit-rtl-ordering: logical;
+    cursor: text;
+    background-color: field;
+    margin: 0em 0em 0em 0em;
+    padding: 1px 0px;
+    border-width: 2px;
+    border-style: inset;
+    border-color: light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+    border-image: initial;
+    padding-block: 1px;
+    padding-inline: 2px;
+}
+
+
+
+
+@media (max-width: 1024px) {
+    .btn__menu
+Specificity: (0,1,0)
+ {
+        display: block;
+    }
+}
+
+.btn__menu {
+    background-color: transparent;
+    border: none;
+    display: none;
+    transition: all 300ms 
+ease;
+}
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+}
+
+
+
+
+
+
 button {
     cursor: pointer;
 }
+button {
+    appearance: auto;
+    font-style: ;
+    font-variant-ligatures: ;
+    font-variant-caps: ;
+    font-variant-numeric: ;
+    font-variant-east-asian: ;
+    font-variant-alternates: ;
+    font-variant-position: ;
+    font-variant-emoji: ;
+    font-weight: ;
+    font-stretch: ;
+    font-size: ;
+    font-family: ;
+    font-optical-sizing: ;
+    font-size-adjust: ;
+    font-kerning: ;
+    font-feature-settings: ;
+    font-variation-settings: ;
+    text-rendering: auto;
+    color: buttontext;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    cursor: default;
+    box-sizing: border-box;
+    background-color: buttonface;
+    margin: 0em 0em 0em 0em;
+    padding-block: 1px;
+    padding-inline: 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: buttonborder;
+    border-image: initial;
+
+}
+
+
 h1 {
-    display: block;
-        font-size: 2em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    unicode-bidi: isolate;
+       font-size: 48px;
+    color: #1a202c;
+    line-height: 1.25;
 }
 h2 {
     display: block;
@@ -88,11 +222,29 @@ h2 {
     unicode-bidi: isolate;
 }
 
-
-
-
-
-
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
+}
+:host, :root {
+    --fa-style-family-classic
+"Font Awesome 6 Free"
+: "Font Awesome 6 Free";
+    --fa-font-solid: normal 900 1em / 1 "Font Awesome 6 Free";
+}
+--fa-font-regular
+:host, :root {
+    --fa-style-family-brands
+"Font Awesome 6 Brands"
+: "Font Awesome 6 Brands";
+    --fa-font-brands: normal 400 1em / 1 "Font Awesome 6 Brands";
+}
 
 
 p {
@@ -126,8 +278,6 @@ NAVBAR ↓
     font-size: 1.5rem;
     font-weight: bold;
   color: #6415ff;
-
-
 }
 
 nav {
@@ -139,6 +289,16 @@ nav {
     display: flex;
     justify-content: space-between;
 }
+.row {
+    width 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+
+}
+
+
+
+
 
 .nav__link--primary:hover {
         background-color: rgba(80, 17, 204);
@@ -166,6 +326,18 @@ nav {
     padding-bottom: 2px;
     letter-spacing: 0.6px;
 }
+.nav__link:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    height: 2px;
+    width: 100%;
+    background: #6415ff;
+    transition: all 300ms 
+ease;
+    opacity: 0;
+}
 
 
 .nav__logo {
@@ -182,15 +354,28 @@ nav {
     border-bottom: 2px solid transparent;
     position: relative;
     transition: all 300ms;
-    margin: 0 24px;
-}   
+
+
+}  
+ .nav__link:hover:after {
+    opacity: 1;
+}
 
 a {
     display: inline;
     text-decoration: none;
+   
 }
 
-
+.login {
+    margin-left: 48px;
+}
+:host, :root
+Specificity: (0,1,0)
+ {
+    --fa-style-family-classic: "Font Awesome 6 Free";
+    --fa-font-solid: normal 900 1em / 1 "Font Awesome 6 Free";
+}
 
 
 .nav__logo--img {
@@ -198,6 +383,17 @@ a {
     width: 40px;
 
 }
+
+.nav__logo {
+    display: flex;
+    align-items: center;
+    margin: 8px;
+    padding-bottom: 4px;
+
+}
+
+
+
 .nav__link--primary {
     margin: 0;
     padding: 10px 32px;
@@ -207,6 +403,8 @@ a {
     line-height: 1.5;
     border: none;
     width: auto;
+    transition: all 300ms ease;
+
     
 }
 .nav__link--primary:after {
@@ -225,6 +423,7 @@ a {
     width: 100%;
     background: #6415ff;
     transition: all 300ms ease;
+        opacity: 0;
 }
 
 a {
@@ -297,6 +496,9 @@ a {
     top: 24px;
     right: 18px;
 }
+.btn:hover {
+    background-color: rgb(80, 17, 204);
+}
 
 
 /* 
@@ -305,12 +507,44 @@ HEADER / ABOUT US ↓
 
 */
 
+.headeremail--input {
+    width: 100%;
+    padding: 12px;
+    border-radius: 0%;
+}
+.header__email {
+    position: relative;
+}
+.header__email-btn {
+    position: absolute;
+    padding-right: 0;
 
+}
+
+.header_customer {
+width: 50%;
+}
+@media (max-width: 1280px) {
+    .header__img
+Specificity: (0,1,0)
+ {
+        max-width: 512px;
+    }
+}
+@media (max-width: 1280px) {
+    .header__description--para
+Specificity: (0,1,0)
+ {
+        font-size: 16px;
+    }
+}
 header .row {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
+
 .header__img {
         width: 100%;
     max-width: 768px;
@@ -325,6 +559,16 @@ h1 {
         font-size: 48px;
     color: #1a202c;
     line-height: 1.25;
+}
+h1 {
+        display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
 }
 
 /* 
@@ -343,6 +587,13 @@ FEATURES ↓
     flex-direction: column;
     align-items: center;
 }
+. feature__img {
+        width: 24px;
+    height: 24px;
+}
+#features .section__title, #pricing .section__title {
+    text-align: center;
+}
 
 
 /* 
@@ -357,7 +608,19 @@ QUALITY WORK ↓
     justify-content: space-between;
     align-items: center;
 }
-
+#quality .section__title, #values .section__title
+Specificity: (1,1,0)
+ {
+    line-height: 1.25;
+}
+.quality__img
+Specificity: (0,1,0)
+ {
+    z-index: 1;
+}
+#quality .btn {
+    margin-top: 32px;
+}
 
 /* 
 
