--- a/style.css
+++ b/style.css
@@ -956,9 +956,10 @@ section #testimonials {
   margin-left: 24px;
 }
 .testimonial__img {
-  width: 80px;
-  height: 80px;
+  width: 64px;
+  height: 64px;
   border-radius: 50%;
+  flex-wrap: wrap;
 }
 .testimonial__role {
   color: #7c8ba1;
