--- a/style.css
+++ b/style.css
@@ -16,7 +16,15 @@ body {
 div {
     display: block;
     unicode-bidi: isolate;
+}.divider {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+    border-right-width: 1px;
+    width: 0.5px;
+    background-color: #edf2f7;
+    height: 20px;
 }
+
 
 .row {
   width: 100%;
@@ -32,13 +40,18 @@ div {
 .container {
   padding: 96px 0;
 }
+
+
+img {
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+
 a {
   display: inline;
   text-decoration: none;
 }
-img {
-  width: 100%;
-}
+
 h1 {
   font-size: 48px;
   color: #1a202c;
@@ -881,9 +894,13 @@ h4 {
   justify-content: space-between;
 }
 
-/* TESTIMONIALS */
-section #testimonials {
-  padding: 0px;
+/* 
+TESTIMONIALS
+ */
+
+
+ section {
+  padding: 0 32px;
 }
 
 #testimonials .container {
@@ -899,6 +916,8 @@ section #testimonials {
   align-items: center;
   justify-content: space-between;
 }
+
+
 .testimonials__img,
 .testimonials__description {
   width: 50%;
@@ -927,14 +946,6 @@ section #testimonials {
   font-size: 1.25rem;
   font-weight: 700;
 }
-
-.testimonial__name {
-  color: #4a5568;
-  line-height: 1.625;
-  font-size: 1.25rem;
-  font-weight: 700;
-}
-
 .testimonial__para {
   margin-top: 1rem;
   margin-bottom: 2rem;
@@ -942,6 +953,11 @@ section #testimonials {
   line-height: 1.625;
   font-size: 16px;
   color: rgb(74 85 104);
+}
+.testimonial__img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
 }
 
 .testimonial__bottom {
@@ -952,15 +968,19 @@ section #testimonials {
   display: flex;
   align-items: center;
 }
+
 .testimonial__details {
   margin-left: 24px;
 }
-.testimonial__img {
-  width: 64px;
-  height: 64px;
-  border-radius: 50%;
-  flex-wrap: wrap;
+
+.testimonial__name {
+  color: #4a5568;
+  line-height: 1.625;
+  font-size: 1.25rem;
+  font-weight: 700;
 }
+
+
 .testimonial__role {
   color: #7c8ba1;
   font-weight: 500;
